# conways-game-of-life

./: .gitignore  Cargo.toml  README.md  compile-wasm-2d.sh  compile-wasm.sh  index.html  index.js
birthday_cake/: Cargo.toml
birthday_cake/src/: life.rs  main.rs
game-of-life/: Cargo.toml  index.html
game-of-life/src/: lib.rs  main.rs
pkg/: README.md  game_of_life.js  game_of_life_bg.wasm  game_of_life_bg.wasm.d.ts  package.json
src/: game_2d.rs  game_3d.rs  main.rs
wasm/: Cargo.toml
wasm/pkg/: wasm.d.ts  wasm.js  wasm_bg.wasm
wasm/src/: lib.rs
wasm_2d/: Cargo.toml  index.js
wasm_2d/pkg/: wasm.d.ts  wasm.js  wasm_bg.wasm  wasm_bg.wasm.d.ts
wasm_2d/src/: lib.rs
wasm_3d/: Cargo.toml
wasm_3d/src/: ascii.rs  color.rs  life.rs  main.rs
