[package]
name = "wasm"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
#tui = "0.16.0"
#termion = "1.5"
getrandom = { version = "0.2", features = ["js"] }
#piston_window = "*"
#kiss3d = "0.30.0"
#random_color = "0.6.1"
#getrandom = { version = "0.2.4", features = ["js"] }
#clap = { version = "3.0.13", features = ["derive"] }
wasm-bindgen = "0.2.74"
chrono = {version = "0.4.19", features = ["wasmbind"]}

[dependencies.web-sys]
version = "0.3.4"
features = [
    'CanvasRenderingContext2d',
    'Document',
    'Element',
    'HtmlCanvasElement',
    'Window',
]
